--- a/src/components/styles/projectLeft.module.css
+++ b/src/components/styles/projectLeft.module.css
@@ -28,9 +28,8 @@
   margin-left: 30px;
 }
 
-.buttonLinks:hover {
-  cursor: pointer;
-  box-shadow: 0 0 2px white;
+.allText a:focus {
+  outline: none;
 }
 
 .roles {
