--- a/src/components/styles/projectRight.module.css
+++ b/src/components/styles/projectRight.module.css
@@ -2,7 +2,6 @@
     /* height: 110vh; */
     /* background-size: cover; */
     position: relative;
-    overflow-x: hidden;
 }
 
 .projectBackground {
@@ -29,9 +28,8 @@
   margin-left: 30px;
 }
 
-.buttonLinks:hover {
-  cursor: pointer;
-  box-shadow: 0 0 2px white;
+.allText a:focus {
+  outline: none;
 }
 
 .roles {
