--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@ body {
   margin: 0;
   padding: 0;
   background-color: #130e13;
+  overflow-x: hidden;
 }
